fix(frontend): Update functionality, styles
Switched to using a useEffect instead of multiple function calls to close the legend, as
all of the dependencies are at the top level, so this makes sense.

Also updated styles to contain the legend within the bounds of the map, pinned to the side and
scrollbars for large legends.

--- a/src/assets/scss/custom/pages/_data-layer.scss
+++ b/src/assets/scss/custom/pages/_data-layer.scss
@@ -23,16 +23,23 @@
     height: 40px;
 }
 
-.legend {
+.legend-container {
     display: flex;
     align-items: center;
     height: 100%;
     z-index: 1;
 
     img {
-        height: 75%;
-        max-width: 15rem;
+        max-width: 12.5rem;
     }
+}
+
+.legend {
+    display: flex;
+    align-items: center;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 80%;
 }
 
 .props_box {
